# AnimalChessGame

./: BeastChess.cabal  README.md  interface.md  package.json
src/: HumanGame.hs  Logic.hs  Main.hs  UIHelper.hs
