name:                BeastChess
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/zyma-Jasper/Haskwell/blob/main/README.md
license:             BSD3
license-file:        LICENSE
author:              Zhenya Ma, Hongkai Chen, Junchen Bao, Zhehao Luo
maintainer:
copyright:           2017 
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

executable BeastChess
  hs-source-dirs:      src
  other-modules:       UIHelper
                     , HumanGame
                     , Logic
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010
  build-depends:       base         >= 4.7 && < 5
                     , brick
                     , containers   >= 0.5.7.1 && < 0.5.8
                     , linear       >= 1.20.6 && < 1.21
                     , random       >= 1.1 && < 2
                     , vty

test-suite BeastChess-test
  type:                 exitcode-stdio-1.0
  hs-source-dirs:       test
  other-modules:        UIHelper
  main-is:              Test.hs
  default-language:    Haskell2010
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N

source-repository head
  type:     git
  location: https://github.com/zyma-Jasper/Haskwell
